--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -4,6 +4,50 @@
 
 NOTE: This is the {productname} Community version changelog. For information about the latest {cloudname} or {enterpriseversion} Release, see: xref:release-notes.adoc[{productname} Release Notes].
 
+== 6.3.0 - 2022-11-23
+
+=== Added
+* New `expand` function added to `tinymce.selection` which expands the selection around the nearest word.
+* New `expand` function added to `tinymce.dom.RangeUtils` to return a new range expanded around the nearest word.
+* New `color_map_background` and `color_map_foreground` options which set the base colors used in the `backcolor` and `forecolor` toolbar buttons and menu items.
+* Added optional `storageKey` property to `colorinput` component and `colorswatch` fancy menu item.
+* New `addView` function added to `editor.ui.registry` which makes it possible to register custom editor views.
+* New `ToggleView` command which makes it possible to hide or show registered custom views.
+* New `color_default_foreground` and `color_default_background` options to set the initial default color for the `forecolor` and `backcolor` toolbar buttons and menu items.
+* New `getTransparentElements` function added to `tinymce.html.Schema` to return a map object of transparent HTML elements.
+* Added `ToggleToolbarDrawer` event to subscribe to toolbar’s opening and closing.
+
+=== Changed
+* Transparent elements, like anchors, are now allowed in the root of the editor body if they contain blocks.
+* Colorswatch keyboard navigation now starts on currently selected color if present in the colorswatch.
+* `setContent` is now allowed to accept any custom keys and values as a second options argument.
+
+=== Improved
+* Transparent elements, like anchors, can now contain block elements.
+* Colorswatch now displays a checkmark for selected color.
+* Color picker dialog now starts on the appropriate color for the cursor position.
+
+=== Fixed
+* Parsing media content would cause a memory leak, which for example occurred when using the `getContent` API.
+* Dragging a noneditable element toward the bottom edge would cause the page to scroll up.
+* Range expanding capabilities would behave inconsistently depending on where the cursor was placed.
+* Compilation errors were thrown when using TypeScript 4.8.
+* Line separator scrolling in floating toolbars.
+* A double bottom border appeared on inline mode editor for the `tinymce-5` skin.
+* The editor header showed up even with no menubar and toolbar configured.
+* Inline text pattern no longer triggers if it matches only the end but not the start.
+* Matches of inline text patterns that are similar are now managed correctly.
+* Using `editor.selection.getContent({ format: 'text' })` or `editor.getContent({ format: 'text' })` would sometimes deselect selected radio buttons.
+* The context toolbar prevented the user from placing the cursor at the edges of the editor.
+* The Quick Insert context toolbar provided by the `quickbars` plugin showed when the cursor was in a fake block caret.
+* The `editor.selection.getRng()` API was not returning a proper range on hidden editors in Firefox.
+* The `editor.selection.getBookmark()` API was not returning a proper bookmark on hidden editors in Firefox.
+* Dragging a noneditable element before or after another noneditable element now works correctly.
+* The restored selection after a redo or undo action was not scrolled into view.
+* A newline could not be inserted when the selection was restored from a bookmark after an inline element with a `contenteditable="false"` attribute.
+* The global `tinymce.dom.styleSheetLoader` was not affected by the `content_css_cors` option.
+* The caret was moved to the previous line when a text pattern executed a `mceInsertContent` command on Enter key when running on Firefox.
+
 == 6.2.0 - 2022-09-08
 
 === Added
