DOC-1777: 6.3-release-notes.adoc
Sub-head copy-edit. Also added introductory paragraph re new Smart Typography premium plugin to that section.

--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -34,11 +34,11 @@ The Inline CSS plugin allows the user to <notes here>.
 
 For information on the **Inline CSS** plugin, see: xref:inline-css.adoc[Inline CSS].
 
-=== Smart typography 1.0.0
+=== Smart Typography 1.0.0
 
 The {productname} 6.3 release includes the new **Smart typography** premium plugin.
 
-The Smart typography plugin allows the user to <notes here>.
+The Smart Typography plugin, depending on its setting, can automatically or interactively replace common typewriter-style characters with their professional typesetter’s equivalents.
 
 For information on the **Smart typography** plugin, see: xref:smart-typography.adoc[Smart typography].
 
